# SDUPI

./: .gitignore  BLOCKCHAIN_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_TPS_COMPARISON.md  Cargo.toml  FINAL_BLOCKCHAIN_COMPARISON.md  FINAL_MAINNET_READINESS.md  FINAL_TPS_COMPARISON_SUMMARY.md  MAINNET_DEPLOYMENT_ROADMAP.md  PROJECT_OVERVIEW.md  README.md  README_SDUPI.md  REAL_PERFORMANCE_COMPARISON.md  SDUPI_COMPLETE_SUMMARY.md  SDUPI_PUBLIC_RELEASE_GUIDE.md  SDUPI_RESEARCH_ANALYSIS.md  SDUPI_TESTNET_RELEASE_STATUS.md  SDUPI_WHITEPAPER.md  TESTNET_DEPLOYMENT_SUMMARY.md  TESTNET_RELEASE_ACTION_PLAN.md  TESTNET_RELEASE_README.md  TESTNET_RELEASE_SUMMARY.md  TPS_COMPARISON_ANALYSIS.md  WALLET_INTEGRATION_GUIDE.md  advanced_protection_system.py  advanced_smart_contract_engine.rs  algorand_testing_setup.sh  blockchain-explorer-api.js  check-status.sh  deploy-testnet-complete.sh  deploy_genesis_node.sh  deploy_sdupi.py  deploy_testnet.sh  deploy_validator_network.sh  deploy_validators.sh  faucet_server.js  generate_blockchain_activity.js  high_performance_tps_test.js  metrics_server.js  monitor_blockchain.sh  package.json  (+21 more)
algorand-testing/config/: algorand_config.json  comparison_config.json
algorand-testing/results/: sdupi_vs_algorand_report.json  sdupi_vs_algorand_report.md
configs/: explorer_config.json  faucet.json  faucet_config.json  genesis.json  monitoring.json  monitoring_config.json  node_config.json  sdupi_config.json  testnet_config.json
contracts/: SDUPIExchange.sol  SDUPIPayment.sol  SDUPIToken.sol
core/: Cargo.toml
core/src/: consensus.rs  crypto.rs  dag.rs  error.rs  lib.rs  main.rs  network.rs  smart_contract.rs  storage.rs  transaction.rs  wallet_integrations.rs
docs/: DEVELOPMENT.md  PERFORMANCE_ANALYSIS.md
frontend/: index.html
scripts/: deploy_sample_contract.js  setup.sh  start_onramp.sh
sdupi-blockchain (1)/: README_SDUPI_FRONTEND.md  SDUPI_TECHNICAL_SPECIFICATIONS.md  gas-fee-calculator.js  mock-backend.js  package.json  pnpm-lock.yaml
sdupi-blockchain (1)/app/: globals.css  layout.tsx  page.tsx
sdupi-blockchain (1)/app/contracts/: page.tsx
sdupi-blockchain (1)/app/defi/: page.tsx
sdupi-blockchain (1)/app/explorer/: page.tsx
sdupi-blockchain (1)/app/sdupi-dashboard/: page.tsx
sdupi-blockchain (1)/components/: analytics-chart.tsx  mobile-nav.tsx  notification-system.tsx  real-time-status.tsx  sdupi-defi.tsx  sdupi-explorer.tsx  sdupi-faucet.tsx  sdupi-wallet.tsx  theme-toggle.tsx  transaction-form.tsx  wallet-connect-modal.tsx  wallet-info-panel.tsx
sdupi-blockchain (1)/components/ui/: toast-container.tsx  toast.tsx
sdupi-blockchain (1)/hooks/: use-toast.ts  useSDUPIBlockchain.ts
sdupi-blockchain (1)/lib/: sdupi-blockchain.ts
simulations/: run_simulation.py  ultra_high_performance_simulation.py
wasm-vm/: Cargo.toml
wasm-vm/src/: lib.rs
zk-starks/: Cargo.toml
zk-starks/src/: lib.rs
