[package]
name = "sdupi-wasm-vm"
version = "0.1.0"
edition = "2021"
authors = ["SDUPI Team"]
description = "WebAssembly virtual machine for SDUPI blockchain smart contracts"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebAssembly
wasmtime = "12.0"
wasmtime-wasi = "12.0"
wasmtime-wasi-nn = "12.0"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
