[package]
name = "sdupi-zk-starks"
version = "0.1.0"
edition = "2021"
authors = ["SDUPI Team"]
description = "ZK-STARKs integration for SDUPI blockchain"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
